--- a/scripts/cesium_map.html
+++ b/scripts/cesium_map.html
@@ -1,48 +1,56 @@
 
-        <!DOCTYPE html>
-        <html>
-        <head>
-            <script src="file:///home/definitely_not_marvin/Downloads/CesiumJS/Build/Cesium/Cesium.js"></script>
-            <link href="file:///home/definitely_not_marvin/Downloads/CesiumJS/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-            <style>
-                body, html { margin: 0; padding: 0; width: 100%; height: 100%; }
-                #cesiumContainer { width: 100%; height: 100%; }
-            </style>
-        </head>
-        <body>
-            <div id="cesiumContainer"></div>
-            <script>
-                var viewer = new Cesium.Viewer('cesiumContainer', {
-                    terrainProvider: Cesium.createWorldTerrain()
-                });
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.122/Build/Cesium/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.122/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <style>
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; }
+        #cesiumContainer { width: 100%; height: 100%; }
+    </style>
+</head>
+<body>
+    <div id="cesiumContainer"></div>
+    <script>
+        // Insert your Cesium Ion access token here
+        Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJiYTc0Y2UyOC0zNDk4LTQ2Y2MtOGMxYy1iNTkzZTU1Njk2ZjUiLCJpZCI6MjQ3NjQzLCJpYXQiOjE3Mjg3NTI4NTV9.t9TaQyYUq1PVfC_TcR6JMiiEqaEJi4pa9K-VVvSLTMU'; // Replace with your token
 
-                var roverPath = [];  // Stores the rover path
+        let viewer;
 
-                function updateRoverPosition(lat, lon, alt) {
-                    var roverLocation = Cesium.Cartesian3.fromDegrees(lon, lat, alt);
-                    if (roverPath.length === 0) {
-                        var roverEntity = viewer.entities.add({
-                            position: roverLocation,
-                            point: { pixelSize: 10, color: Cesium.Color.RED }
-                        });
-                    } else {
-                        roverPath.push(roverLocation);
-                        viewer.entities.add({
-                            polyline: {
-                                positions: roverPath,
-                                width: 5,
-                                material: Cesium.Color.RED
-                            }
-                        });
-                    }
-                    viewer.zoomTo(viewer.entities);
+        function initCesium() {
+            viewer = new Cesium.Viewer('cesiumContainer', {
+                terrainProvider: Cesium.createWorldTerrain()
+            });
+
+            // Fly the camera to San Francisco at the given longitude, latitude, and height.
+            viewer.camera.flyTo({
+                destination: Cesium.Cartesian3.fromDegrees(-122.4175, 37.655, 400),
+                orientation: {
+                    heading: Cesium.Math.toRadians(0.0),
+                    pitch: Cesium.Math.toRadians(-15.0),
                 }
+            });
 
-                function receiveGPSData(gpsData) {
-                    var data = JSON.parse(gpsData);
-                    updateRoverPosition(data.latitude, data.longitude, data.altitude);
-                }
-            </script>
-        </body>
-        </html>
-        
+            // Add Cesium OSM Buildings, a global 3D buildings layer.
+            Cesium.createOsmBuildingsAsync().then((buildingTileset) => {
+                viewer.scene.primitives.add(buildingTileset);
+            });
+        }
+
+        initCesium(); // Call the function to initialize Cesium
+
+        // Function to update rover position
+        function receiveGPSData(gpsData) {
+            console.log("Received GPS Data:", gpsData);  // Debugging line
+            const data = JSON.parse(gpsData);
+            const roverLocation = Cesium.Cartesian3.fromDegrees(data.longitude, data.latitude, data.altitude);
+            viewer.entities.add({
+                position: roverLocation,
+                point: { pixelSize: 10, color: Cesium.Color.RED }
+            });
+            viewer.zoomTo(viewer.entities);
+        }
+    </script>
+</body>
+</html>
